# nola

./: .gitignore  LICENSE  Makefile  README.md  go.mod  go.sum  go.work  go.work.sum  test
.github/workflows/: test.yml
cmd/app/: go.mod  go.sum  main.go
cmd/utils/: flags.go
cmdutils/: flags.go
durable/: durable.go  types.go
durable/durablewazero/: module.go  module_benchmark_test.go  module_test.go  object.go  object_test.go
examples/dnsregistry/: README.md  main.go  main_test.go
examples/file_cache/: benchmark_test.go  file_cache.go  file_cache_test.go
examples/filecache/: benchmark_test.go  file_cache.go  file_cache_test.go
examples/leaderregistry/: main_test.go
examples/memorybalancer/: main_test.go
examples/semaphore/: README.md  acquire.sh  create_actors.sh  main.go  main.wasm  register_module.sh
inner/: metrics.go  pprof.go
proofs/stateright/activation-cache/: Cargo.toml  README.md
proofs/stateright/activation-cache/src/: main.rs
scratch/: main.go  main_test.go
scripts/playground/: basic.sh  create_actor.sh  invoke_test_util.sh  register_module.sh
virtual/: activation_cache.go  activations.go  actor_resource_tracker.go  actor_resource_tracker_test.go  benchmarks_test.go  client.go  environment.go  environment_test.go  errs.go  errs_test.go  host_capabilities.go  http_client.go  server.go  server_test.go  types.go  wazero.go  websockets.go
virtual/benchmarks/: benchmarks_test.go  go.mod  go.sum
virtual/futures/: futures.go  types.go
virtual/librarytest/: library_test.go
wapcutils/: actor.go  kv.go  kv_test.go  types.go
(+59 files in other folders)
