[package]
name = "activation-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
serde_json = "1.0"
stateright = "0.29"
num_cpus = "1.13"
pico-args = "0.5"
csv = "1.1.6"
serde = { version = "1.0", features = ["rc"] }
derive_more = "0.99.16"
stackvector = "1.1.1"